Layout changes; No longer use bootstrap for layout
Fixed double scrollbar; Redid layout without bootstrap

--- a/cozycast-server/src/main/resources/static/css/styles.css
+++ b/cozycast-server/src/main/resources/static/css/styles.css
@@ -1,20 +1,137 @@
-.nogap {
-  margin-left: 0px;
-  margin-right: 0px;
-  padding-left: 0px;
-  padding-right: 0px;
+* {
+  box-sizing: border-box;
+}
+
+:root {
+  --cozycast-noise: url("/png/noise_128.png");
+  --cozycast-dpr: 1;
+  font-family: sans-serif;
+}
+
+html, body, #pagecontent, #videosizer {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#pagecontent {
+  display: grid;
+  grid:
+    "video chat" 1fr
+    "toolbar chat" 5em
+    / 1fr 15em;
+}
+
+@media (max-width: 780px) {
+  #pagecontent {
+    grid:
+      "video" 40%
+      "toolbar" 4em
+      "chat" 1fr;
+  }
+
+  #messages {
+    scrollbar-width: thin;
+  }
+}
+
+#usrlist, #messages {
+  scrollbar-color: #235 #346;
+}
+
+#pagecontent > * {
+  background: fixed repeat top left var(--cozycast-noise);
+  background-size: calc(128px / var(--cozycast-dpr));
+}
+
+#videoBig, #video {
+  min-width: 0;
+  min-height: 0;
 }
 
 #videoBig {
-    position: relative;
+  grid-area: video;
+  position: relative;
+  background-color: #181828;
 }
 
-#video:focus{
-    outline: 0;
+#videosizer {
+  display: flex;
+}
+
+#video {
+  flex-grow: 1;
+}
+
+#chat {
+  grid-area: chat;
+  display: flex;
+  flex-direction: column;
+  background-color: #123; 
+  min-height: 0;
+}
+
+#chatbox {
+  padding: 10px;
+}
+
+#pagetoolbar {
+  grid-area: toolbar;
+  display: flex;
+  background-color: #123;
+}
+
+#controls {
+  display: grid;
+  grid-gap: .5em;
+  padding: .5em;
+}
+
+.btn {
+  color: white;
+  border-radius: 0.2em;
+  transition: background-color 0.2s;
+}
+
+.btn-primary {
+  background-color: #f90;
+  border-color: #b60;
+}
+
+.btn-primary:hover {
+  background-color: #b60;
+}
+
+.btn-danger {
+  background-color: #17c;
+  border-color: #048;
+}
+
+.btn-danger:hover {
+  background-color: #048;
+}
+
+#copyright {
+  grid-column: span 3;
+  color: lightgray;
+  font-size: .5em;
+}
+
+.message {
+  background-color: rgba(0, 0, 0, 0.3);
+  margin-top: 10px;
+  padding: .5em;
+  border-radius: .2em;
+  box-shadow: 0 0 4px black inset;
+}
+
+.message > div:not(.username) {
+  margin-left: .5em;
+  font-size: .8em;
 }
 
 #videocontrols {
-    outline: 0;
     width: 100%;
     height: 100%;
     position: absolute;
@@ -23,38 +140,12 @@
     z-index: 2;
 }
 
-.background {
-  background-color: #2c3e50;
-}
-
-.controls {
-    padding-left: 25px;
-}
-
-input[type="range"].volumeSlider {
-    width: 100px;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
-.full-width {
-  width: 100%;
-}
-
-.full-height {
-  height: 100%;
-}
-
-.chat-color, .chat-link, .chat-link:hover  {
+#chat, .chat-link, .chat-link:hover  {
   color: white;
 }
 
 .username {
   font-weight: 600;
-}
-
-.message {
-  margin-top: 10px;
 }
 
 #messages {
@@ -63,19 +154,6 @@ input[type="range"].volumeSlider {
   padding-right: 10px;
   overflow-y: scroll;
   word-break: break-word;
-}
-
-.chat {
-  background-color: #344659;
-  padding-right: 0px;
-  display: flex;
-  flex-direction: column;
-}
-
-.chatbox {
-  padding-right: 10px;
-  padding-top: 10px;
-  padding-bottom: 10px;
 }
 
 .chat-image {
@@ -92,15 +170,25 @@ input[type="range"].volumeSlider {
 }
 
 #chatbox-textarea {
-  color: #504848;
+  color: white;
+  background: #235 var(--cozycast-noise);
   resize: none;
   width: 100%;
   border-radius: 5px;
+  border-color: #124;
+  font: .8em sans-serif;
+  padding: .3em;
+  height: 5em;
 }
 
-.userlist {
-    display: flex;
-    justify-content: center;
+#userlist {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  min-width: 0;
+  overflow: auto hidden;
+  scrollbar-color: #235 #346;
+  scrollbar-width: thin;
 }
 
 .user {
@@ -127,12 +215,12 @@ input[type="range"].volumeSlider {
 }
 
 .volumeSlider {
-  margin-top: 15px;
+  align-self: center;
   -webkit-appearance: none;
   appearance: none;
   width: 100px;
   height: 5px;
-  background: #fff;
+  background: #346;
   outline: none;
   opacity: 0.7;
   -webkit-transition: .2s;
@@ -144,7 +232,7 @@ input[type="range"].volumeSlider {
   appearance: none;
   width: 15px;
   height: 15px;
-  background: #1d7fac;
+  background: #235;
   cursor: pointer;
   border-radius: 50%;
 }
@@ -189,49 +277,67 @@ input[type="range"].volumeSlider {
     }
 }
 
-.profile-modal-background {
-    position: fixed;
-    z-index: 3;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.7)
+#profile-modal-background {
+  position: fixed;
+  z-index: 3;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.7)
 }
 
-.profile-modal {
-    background-color: #2c3e50;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 10px;
-    border: 1px solid #fff;
-    width: 30%;
-    color: #fff;
+#profile-modal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #123 var(--cozycast-noise);
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 10px;
+  border: 1px solid black;
+  border-radius: 1em;
+  box-shadow: 0 0 1em black;
+  width: 30%;
+  color: #fff;
 }
 
-.profile-modal-close a {
-    color: #fff;
+#profile-modal > .title {
+  display: flex;
+  align-self: stretch;
 }
 
-.profile-modal-close a:hover {
-    color: #337ab7;
-    text-decoration: none;
+#profile-modal > .title > div {
+  text-align: center;
+  flex-grow: 1;
 }
 
-.profile-modal-username {
+#profile-modal-close {
+  width: 1.5em; height: 1.5em;
+  color: #fff;
+  font-weight: bold;
+  border: none;
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 50%;
+  box-shadow: 0 0 3px black inset;
+}
+
+#profile-modal-close:hover {
+  color: #337ab7;
+}
+
+#profile-modal-username {
     background: #2c3e50;
     border: 1px solid #fff;
     padding: 5px;
 }
 
-.profile-modal .row {
-    display: flex;
-    justify-content: center;
-    padding-top: 5px;
-    padding-bottom: 5px;
+#profile-modal .title{
+  display: flex;
+  font-size: 2em;
 }
 
-.profile-modal div.title {
-    font-size: 2em;
+#profile-modal .btn {
+  margin-top: .5em;
 }
 
 .image {
@@ -241,6 +347,7 @@ input[type="range"].volumeSlider {
 }
 
 .avatar {
+    border: 2px solid lightgray;
     border-radius: 50%;
     width: 60px;
     height: 60px;
@@ -248,8 +355,10 @@ input[type="range"].volumeSlider {
 }
 
 .avatar.big {
-    width: 180px;
-    height: 180px;
+  border-width: 3px;
+  box-shadow: 0 0 1em black inset;
+  width: 180px;
+  height: 180px;
 }
 
 .uploader-overlay {
